Version 1.9.7:
   - [QTenki] Scrollbars will now appear if there is not enough space.
   - [QTenki] Remember window positions and size
   - [QTenki] Options to append or overwrite file, with optional confirmation.
   - [QTenki] Added a 'log comment' field that gets written to the log file.

Version 1.9.6:
	- [Command-line] Fixed the month number in timestamps generated by the command line tool.
	- [QTenki] Fixed a bug where occasional logged values would appear in the default
	sensor units rather than the ones configured by the user. (Eg: An
	occasional Celcius record in a Farenheit log file).	
	- [QTenki] Configuration panel now disabled while logging to prevent inadvertant
	changes to logging formats (eg: Changing units)	
	- [QTenki] Mention that changes are automatically saved and immediate in the
	configuration panel.
	- [QTenki] Logging interval added to the log file header.

Version 1.9.5:
	- Default to the user's home directory in the log file selection dialog.
	- Fixed a timestamp bug where the current minute was logged instead of
		the current month.

Version 1.9.4:
		- Configurable units in qtenki
		- New tab "Big View" in qtenki for displaying selected channels using
		  a big font, readable from afar.
	    - Support for a calibrated PT100 RTD Sensor.

Version 1.9.3:
	General:
	    - Support for PT100 RTD Sensor using 18bit ADC
		- Version 1.9.2 virtual channel bug fix
	QTenki:
	    - Minimize to tray configuration option added.
		- Fix some configuration options which were not saved.

Version 1.9.2:
    General:
		- Added options to disable input range validation for humidex and heat index.
		- Added firmware and host support for a tachometer.
		- Updated SHT75 Relative humidity non-linearity compensation coefficients 
		  according to datasheet Rev.5 (2011).
		- Added an option to use the old coefficients (Datasheet rev.3, 2007)
		- Added a temperature corrected RH reading (sensirion only)
	       
	QTenki: 