@@ -7,6 +7,7 @@
 #include <QLabel>
 #include <QApplication>
 #include <QCheckBox>
+#include <QSpinBox>
 
 #include "SelectableColor.h"
 #include "ConfigPanel.h"
@@ -33,9 +34,16 @@ ConfigPanel::ConfigPanel()
 	cb_disable_heat_index_validation->setChecked(settings.value("data/disable_heat_index_range").toBool());
 	cb_disable_humidex_validation = new QCheckBox(tr("Disable humidex input range check (may produce inaccurate values)"));
 	cb_disable_humidex_validation->setChecked(settings.value("data/disable_humidex_range").toBool());
+	sample_interval = new QSpinBox();
+	sample_interval->setMinimum(1);
+	sample_interval->setMaximum(60);
+	sample_interval->setValue(settings.value("data/global_sample_interval_s").toInt());
+	g_tenkisources->setInterval_ms(sample_interval->value() * 1000);
+
 	TemperaturePreference *t_pref = new TemperaturePreference();
 	PressurePreference *p_pref = new PressurePreference();
 	FrequencyPreference *f_pref = new FrequencyPreference();
+
 	
 	dataBox_layout->addWidget(new QLabel(tr("Temperature unit: ")), 0, 0 );
 	dataBox_layout->addWidget(t_pref, 0, 1);
@@ -51,12 +59,15 @@ ConfigPanel::ConfigPanel()
 	dataBox_layout->addWidget(cb_disable_heat_index_validation, 4, 0, 1, -1);
 	dataBox_layout->addWidget(cb_disable_humidex_validation, 5, 0, 1, -1);	
 
+	dataBox_layout->addWidget(new QLabel(tr("Sample loop interval (s):")), 6, 0);
+	dataBox_layout->addWidget(sample_interval, 6, 1);
+
 	dataBox_layout->setColumnStretch(2, 100);
 	
 	connect(cb_use_old_sht_coefficients, SIGNAL(stateChanged(int)), this, SLOT(updateFlagsFromCheckboxes(int)));
 	connect(cb_disable_heat_index_validation, SIGNAL(stateChanged(int)), this, SLOT(updateFlagsFromCheckboxes(int)));
 	connect(cb_disable_humidex_validation, SIGNAL(stateChanged(int)), this, SLOT(updateFlagsFromCheckboxes(int)));
-
+	connect(sample_interval, SIGNAL(valueChanged(int)), this, SLOT(intervalChanged(int)));
 
 	///////////////////////////
 	default_palette = QApplication::palette();
@@ -150,6 +161,13 @@ void ConfigPanel::updateFlagsFromCheckboxes(int ignored)
 	settings.setValue("data/disable_heat_index_range", cb_disable_heat_index_validation->isChecked());
 	settings.setValue("data/disable_humidex_range", cb_disable_humidex_validation->isChecked());
 	settings.setValue("data/use_old_coefficients", cb_use_old_sht_coefficients->isChecked());
+}
+
+void ConfigPanel::intervalChanged(int i)
+{
+	QSettings settings;
+	settings.setValue("data/global_sample_interval_s", i);
+	g_tenkisources->setInterval_ms(i*1000);
 }
 
 void ConfigPanel::updateMinimizeToTray(int ig)
