@@ -3,6 +3,8 @@ Version 1.9.7:
    - [QTenki] Remember window positions and size
    - [QTenki] Options to append or overwrite file, with optional confirmation.
    - [QTenki] Added a 'log comment' field that gets written to the log file.
+   - [Qtenki] Sample loop interval now configurable
+   - [Command-line] Added option -x to set decimal precision
 
 Version 1.9.6:
 	- [Command-line] Fixed the month number in timestamps generated by the command line tool.
